--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,32 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App form {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+    border-radius: 10px;
+    border: 1px solid rgba(0,0,0,0.5);
+    box-shadow: 0 0 15px rgba(0,0,0,0.5);
+    background-color: rgb(30,30,30);
+    padding-top: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.form-control-group {
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
 }
 
-.card {
-  padding: 2em;
+.App input {
+    width: 260px;
 }
 
-.read-the-docs {
-  color: #888;
+.App button {
+    margin: 20px 0
 }
